--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="container">
       <h2 class="subheading">Мои работы</h2>
 <figure class="project-image">
-<img src="files/project.jpg" width="928" height="536" alt="Cайт Инструктора Кекса">
+<img src="project.jpg" width="928" height="536" alt="Cайт Инструктора Кекса">
 </figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
