--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div class="logo"></div>
-            <a>notallheroes!</a>
+            <a>not all heroes</a>
         </header>
         <div class="plus"></div>
        <div class="intro">
@@ -25,4 +25,4 @@
        </div> 
        
     </body>
-   <html>
+   </html>
