--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@
                     <div class="contacts-content-form">
                         <div class="contacts-content-form__title">Заказать звонок</div>
                         <form action="#" class="contacts-content-form-body">
+
+                            <!-- Hidden Required Fields -->
+                            <input type="hidden" name="project_name" value="autorazbor">
+                            <input type="hidden" name="admin_email" value="savagebones21@yandex.ru">
+                            <input type="hidden" name="form_subject" value="Form popup">
+                            <!-- END Hidden Required Fields -->
+
                             <div class="contacts-content-form-line">
                                 <input autocomplete="off" type="text" name="form[]" placeholder="Имя" data-value="" class="input" />
                             </div>
@@ -370,6 +377,7 @@
             <script src="https://maps.google.com/maps/api/js?sensor=false&amp;key="></script>
             <script src="js/vendors.js"></script>
             <script src="js/popups.js"></script>
+            <script src="js/script.js"></script>
             <script src="js/main.js"></script>
             <script src="js/custom.js" ></script>
     </body>
